--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1402,6 +1402,8 @@
           packer-version: '{packer-version}'
           platform: '{platforms}'
           template: '{templates}'
+      - description-setter:
+          description: '.*Creating the image:(.*)'
 
 - job-template:
     name: '{project-name}-packer-merge-{platforms}-{templates}'
