Add tox-verify job to the default ci group
This ensures our projects are running linters against the prjoect.

Change-Id: I5ce38eeecef8f1241a49dfe7da3eb04fec7ac385
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-ci-job-groups.yaml
+++ b/jjb/lf-ci-job-groups.yaml
@@ -9,6 +9,7 @@
       - gerrit-jjb-deploy-job
       - gerrit-jjb-merge
       - gerrit-jjb-verify
+      - gerrit-tox-verify
 
 - job-group:
     name: '{project-name}-github-ci-jobs'
@@ -20,6 +21,7 @@
       - github-jjb-deploy-job
       - github-jjb-merge
       - github-jjb-verify
+      - github-tox-verify
 
 - job-group:
     name: '{project-name}-info-yaml-jobs'
