Verify jenkins-config files have matching images
This verify job will check that for each config file in
jenkins-config/clouds/**, there is an image on the cloud provider
that matches the IMAGE_NAME field.

Issue-ID: RELENG-1133
Change-Id: I9bf79657af27e8c7ff7b63ced2bd8a0dd544e6d6
Signed-off-by: Eric Ball <eball@linuxfoundation.org>

--- a/.jjb-test/lf-ci-jobs.yaml
+++ b/.jjb-test/lf-ci-jobs.yaml
@@ -67,3 +67,11 @@
       - common-view
     view-regex: '.*-ci-jobs$|.*-openstack-jobs$|.*-packer-jobs$'
     view-description: 'List of ci-jobs, openstack and packer jobs'
+
+- project:
+    name: gerrit-jenkins-cfg-verify
+    jobs:
+      - "gerrit-jenkins-cfg-verify"
+
+    project-name: gerrit-ciman
+
