--- a/.jjb-test/lf-node-jobs.yaml
+++ b/.jjb-test/lf-node-jobs.yaml
@@ -15,8 +15,7 @@
 
 - project:
     name: node-jobs-view
-    project-name: node
     views:
-      - common-view
-    view-regex: '.*-node$'
-    view-description: 'List of node jobs'
+      - project-view
+
+    project-name: node
