--- a/.jjb-test/lf-rtd-jobs.yaml
+++ b/.jjb-test/lf-rtd-jobs.yaml
@@ -21,8 +21,7 @@
 
 - project:
     name: rtd-jobs-view
-    project-name: rtd
     views:
-      - common-view
-    view-regex: '.*-rtd$'
-    view-description: 'List of rtd jobs'
+      - project-view
+
+    project-name: rtd
