Refactor the common-view and csit-view template
Make the 2 views easier to use by projects. The intent of the
common-view is that it automatically matches jobs starting with
{project-name} to automatically create a view tab for all of a
single project's jobs.

The intent of the CSIT view template is to have a common template
that loads the most useful columns for CSIT views. Since we do
not know the search pattern and view name of these views ahead of
time it has 2 required paramaters ``view-name`` and ``view-regex``.

There is no need to force configuration in defaults.yaml for these 2
templates. For common-view it's intent is to load all project jobs
into a single view using a well known regex which does not need to
be modified. For csit-view we don't know how the regex is going to
be ahead of time so this view-template should just load the common
column configuration and require the view-template user to explicitly
declare their regex and view name.

Move documentation from release-notes to documentation. Release notes
should be about informing users about new features where detailed
documentation should instead to to the documentation of the views.

Change-Id: Ife3cfe2e37f019dfb87ac8e90b21afb6bdf06889
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-views.yaml
+++ b/jjb/lf-views.yaml
@@ -34,21 +34,22 @@
       - find-bugs
       - robot-list
     recurse: '{view-recurse}'
-    regex: '{view-regex}'
-    description: '{view-description}'
+    regex: '^{project-name}-.*'
+    description: 'List of jobs for {project-name}.'
 
-#############################
-# integration view template #
-#############################
+######################
+# CSIT view template #
+######################
 
 - view-template:
-    id: 'integration-csit-view'
-    name: '{project-name}'
+    id: 'csit-view'
+    name: '{view-name}'
 
     ######################
     # Default parameters #
     ######################
 
+    view-description: 'CSIT jobs.'
     view-filter-executors: false
     view-filter-queue: false
     view-recurse: false
