Allow JJB Cache directory to be configured
When JJB is ran concurrently on the same system with caching enabled, a
timeout can occur when one job fails after waiting 1 minute to aquire
the lock on the JJB cache directory.

Even if caching is disabled/ignored this timeout can still occur as JJB
always tries to lock the cache directory.

Having the ability to configure the cache directory will allow projects
to override it dynamically (with Jenkins env-vars) and run concurrent
jobs on the same node.

Change-Id: I1187847f658e754621369005e627a0f33a0253bc
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -77,6 +77,10 @@
           name: JJB_VERSION
           default: '{jjb-version}'
           description: Jenkins Job Builder version to download and install.
+      - string:
+          name: XDG_CACHE_HOME
+          default: '{jjb-cache}'
+          description: Jenkins Job Builder cache location.
 
 - parameter:
     name: lf-packer-parameters
@@ -98,6 +102,7 @@
     disable-job: false
     github-url: 'https://github.com'
     jjb-version: 2.2.1
+    jjb-cache: '$HOME/.cache/jenkins_jobs'
     stream: master
     submodule-recursive: true
     submodule-timeout: 10
@@ -137,6 +142,7 @@
           lftools-version: '{lftools-version}'
       - lf-infra-jjb-parameters:
           jjb-version: '{jjb-version}'
+          jjb-cache: '{jjb-cache}'
 
     wrappers:
       - lf-infra-wrappers:
@@ -404,6 +410,7 @@
     parameters:
       - lf-infra-jjb-parameters:
           jjb-version: '{jjb-version}'
+          jjb-cache: '{jjb-cache}'
 
     triggers:
       - timed: '{obj:cron}'
