Rm openstack-install for lf-infra-pre-build
lf-infra-pre-build is able to manage openstack client installs
so remove the openstack-install script. No need to release note since
no project should be using openstack-cron yet as in it's current
state is incomplete.

Change-Id: Ic6ee5ae0e5815d2730b3fa6154fd8e6d5b096844
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1280,9 +1280,9 @@
       - timed: '{obj:cron}'
 
     builders:
+      - lf-infra-pre-build
       - inject:
           properties-content: OS_CLOUD={openstack-cloud}
-      - shell: !include-raw-escape: ../shell/openstack-install.sh
       - shell: !include-raw-escape: ../shell/openstack-protect-in-use-images.sh
 
     publishers:
