Allow image protection script to be disabled
Change-Id: Ie15fc59fba1a4efc475136bf30ed4c94045203d2
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
@@ -8,3 +8,4 @@
     openstack-cloud: example-cloud
     openstack-image-cleanup: false
     openstack-image-cleanup-age: 42
+    openstack-image-protect: false
