--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1241,6 +1241,7 @@
     openstack-cloud: vex
     openstack-image-cleanup: true
     openstack-image-cleanup-age: 30
+    openstack-image-protect: true
     stream: master
     submodule-timeout: 10
 
@@ -1286,7 +1287,11 @@
       - inject:
           properties-content: OS_CLOUD={openstack-cloud}
       # Images
-      - shell: !include-raw-escape: ../shell/openstack-protect-in-use-images.sh
+      - conditional-step:
+          condition-kind: boolean-expression
+          condition-expression: '{openstack-image-protect}'
+          steps:
+            - shell: !include-raw-escape: ../shell/openstack-protect-in-use-images.sh
       - conditional-step:
           condition-kind: boolean-expression
           condition-expression: '{openstack-image-cleanup}'
