Migrate cleanup old images script from ODL
Issue: RELENG-1436
Change-Id: I88e1bc3136b2f9b2542e441a74f26d742679c353
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1239,6 +1239,7 @@
     git-url: '$GIT_URL/$PROJECT'
     github-url: 'https://github.com'
     openstack-cloud: vex
+    openstack-image-age: 30
     stream: master
     submodule-timeout: 10
 
@@ -1282,8 +1283,12 @@
     builders:
       - lf-infra-pre-build
       - inject:
-          properties-content: OS_CLOUD={openstack-cloud}
+          properties-content: |
+              OS_CLOUD={openstack-cloud}
+              OS_IMAGE_AGE={openstack-image-age}
+      # Images
       - shell: !include-raw-escape: ../shell/openstack-protect-in-use-images.sh
+      - shell: !include-raw-escape: ../shell/openstack-cleanup-old-images.sh
 
     publishers:
       - lf-infra-publish
