Add Throttle Property to JJB jobs
This adds "Throttle Builds" configuration to JJB jobs (verify, merge,
etc) to allow global-jjb users with static builders to limit the number
of jjb jobs ran on a single node.

Issue: RELENG-1510
Change-Id: I00d2950451eae8037ded407937131723b0001179
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/.jjb-test/lf-ci-jobs.yaml
+++ b/.jjb-test/lf-ci-jobs.yaml
@@ -69,6 +69,21 @@
       - mininet
 
 - project:
+    name: throttle-ci-jobs
+    jobs:
+      - "{project-name}-ci-jobs"
+
+    throttle-enabled: true
+    throttle_categories:
+        - 'cat1'
+        - 'cat2'
+    throttle-max-per-node: 3
+    throttle-max-total: 2
+    throttle-option: 'category'
+
+    project-name: throttle-ciman
+
+- project:
     name: ci-jobs-view
     views:
       - project-view
