Add Throttle Property to JJB jobs
This adds "Throttle Builds" configuration to JJB jobs (verify, merge,
etc) to allow global-jjb users with static builders to limit the number
of jjb jobs ran on a single node.

Issue: RELENG-1510
Change-Id: I00d2950451eae8037ded407937131723b0001179
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -113,6 +113,11 @@
     stream: master
     submodule-recursive: true
     submodule-timeout: 10
+    throttle_categories: []
+    throttle-option: 'project'
+    throttle-enabled: true
+    throttle-max-per-node: 1
+    throttle-max-total: 0
 
     gerrit_trigger_file_paths:
       - compare-type: REG_EXP
@@ -140,6 +145,12 @@
       - lf-infra-properties:
           project: '{project}'
           build-days-to-keep: 7
+      - throttle:
+          categories: '{obj:throttle_categories}'
+          enabled: '{throttle-enabled}'
+          max-per-node: '{throttle-max-per-node}'
+          max-total: '{throttle-max-total}'
+          option: '{throttle-option}'
 
     parameters:
       - lf-infra-parameters:
