Migrate cleanup-stale-stacks cron script
Generalize script for use in global-jjb.

Issue: RELENG-1432
Change-Id: I9c450c36b0f44a5583bee1932016e7cb3d5ef834
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.jjb-test/lf-ci-jobs.yaml
+++ b/.jjb-test/lf-ci-jobs.yaml
@@ -22,12 +22,20 @@
 
     project-name: gerrit-ciman
 
+    jenkins-urls: >
+        https://jenkins.example.org
+        https://jenkins.example.org/sandbox
+
 - project:
     name: github-openstack-jobs
     jobs:
       - github-openstack-cron
 
     project-name: github-ciman
+
+    jenkins-urls: >
+        https://jenkins.example.org
+        https://jenkins.example.org/sandbox
 
 
 - project:
