--- a/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
@@ -5,8 +5,13 @@
       - 'gerrit-openstack-cron'
 
     project-name: ciman-full
+
+    jenkins-urls: >
+        https://jenkins.example.org
+        https://jenkins.example.org/sandbox
     openstack-cloud: example-cloud
     openstack-image-cleanup: false
     openstack-image-cleanup-age: 42
     openstack-image-protect: false
+    openstack-stack-cleanup: false
     openstack-volume-cleanup: false
