--- a/.jjb-test/lf-ci-jobs/openstack-cron-minimal.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-minimal.yaml
@@ -5,3 +5,7 @@
       - 'gerrit-openstack-cron'
 
     project-name: ci-management
+
+    jenkins-urls: >
+        https://jenkins.example.org
+        https://jenkins.example.org/sandbox
