Migrate cleanup orphaned nodes cron script
Generalize script for reuse in global-jjb.

Issue: RELENG-1434
Change-Id: I7901e58dbc0136c339a2d488c9eef8d46cd5446a
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
+++ b/.jjb-test/lf-ci-jobs/openstack-cron-full.yaml
@@ -13,5 +13,6 @@
     openstack-image-cleanup: false
     openstack-image-cleanup-age: 42
     openstack-image-protect: false
+    openstack-server-cleanup: false
     openstack-stack-cleanup: false
     openstack-volume-cleanup: false
