--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1242,6 +1242,7 @@
     openstack-image-cleanup: true
     openstack-image-cleanup-age: 30
     openstack-image-protect: true
+    openstack-server-cleanup: true
     openstack-stack-cleanup: true
     openstack-volume-cleanup: true
     stream: master
@@ -1299,6 +1300,12 @@
           condition-expression: '{openstack-stack-cleanup}'
           steps:
             - shell: !include-raw-escape: ../shell/openstack-cleanup-orphaned-stacks.sh
+      # Servers
+      - conditional-step:
+          condition-kind: boolean-expression
+          condition-expression: '{openstack-server-cleanup}'
+          steps:
+            - shell: !include-raw-escape: ../shell/openstack-cleanup-orphaned-servers.sh
       # Volumes
       - conditional-step:
           condition-kind: boolean-expression
