WIP Packer test
Change-Id: I5480f17b225f462cc7802981aac9ece3ce611214
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1272,8 +1272,10 @@
     scm:
       - lf-infra-github-scm:
           url: '{git-clone-url}{github-org}/{project}'
-          refspec: ''
-          branch: 'refs/heads/{branch}'
+          refspec: >
+              +refs/heads/*:refs/remotes/origin/*
+              +refs/pull/*:refs/remotes/origin/pr/*
+          branch: '$sha1'
           submodule-recursive: '{submodule-recursive}'
           choosing-strategy: default
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
@@ -1285,7 +1287,7 @@
           cron: ''
 
       - github-pull-request:
-          trigger-phrase: '^remerge$'
+          trigger-phrase: '^(remerge|packer-test-build)$'
           only-trigger-phrase: true
           status-context: 'Packer {platforms}-{templates} Merge'
           permit-all: true
