Allow packer-merge job to test WIP patch
Adds the ability for the packer-merge job to be used on Jenkins
Sandbox systems to test work in progress patches from Gerrit or
GitHub.

Issue: RELENG-1495
Change-Id: I5480f17b225f462cc7802981aac9ece3ce611214
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -1425,14 +1425,18 @@
     #####################
 
     scm:
-      - lf-infra-gerrit-scm:
-          git-url: '{git-url}'
+      - git:
+          url: '{git-url}'
           refspec: '$GERRIT_REFSPEC'
-          branch: '$GERRIT_BRANCH'
-          submodule-recursive: '{submodule-recursive}'
-          submodule-timeout: '{submodule-timeout}'
-          choosing-strategy: gerrit
-          jenkins-ssh-credential: '{jenkins-ssh-credential}'
+          branches:
+            - '$GERRIT_REFSPEC'
+          skip-tag: true
+          wipe-workspace: true
+          submodule:
+            recursive: '{submodule-recursive}'
+            timeout: '{submodule-timeout}'
+          choosing-strategy: default
+          credentials-id: '{jenkins-ssh-credential}'
 
     triggers:
       - timed: '{obj:cron}'
@@ -1482,8 +1486,10 @@
     scm:
       - lf-infra-github-scm:
           url: '{git-clone-url}{github-org}/{project}'
-          refspec: ''
-          branch: 'refs/heads/{branch}'
+          refspec: >
+              +refs/heads/*:refs/remotes/origin/*
+              +refs/pull/*:refs/remotes/origin/pr/*
+          branch: '$GERRIT_REFSPEC'
           submodule-recursive: '{submodule-recursive}'
           submodule-timeout: '{submodule-timeout}'
           choosing-strategy: default
