Remove deprecated lftools-install.sh
lftools-install.sh has been deprecated since v0.25.0 it's about time
we remove it from global-jjb officially.

Change-Id: I770eec99ae63cf92aa145124859f09d5d327c451
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-c-cpp-jobs.yaml
+++ b/jjb/lf-c-cpp-jobs.yaml
@@ -45,7 +45,6 @@
           project: '{project}'
           branch: '{branch}'
           stream: '{stream}'
-          lftools-version: '{lftools-version}'
       - lf-cmake-parameters:
           build-dir: '{build-dir}'
           cmake-opts: '{cmake-opts}'
@@ -90,7 +89,7 @@
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     builders:
-      - shell: !include-raw-escape: ../shell/lftools-install.sh
+      - lf-infra-pre-build
       - lf-provide-maven-settings:
           global-settings-file: '{mvn-global-settings}'
           settings-file: '{mvn-settings}'
@@ -228,7 +227,6 @@
           project: '{project}'
           branch: '{branch}'
           stream: '{stream}'
-          lftools-version: '{lftools-version}'
       - lf-cmake-parameters:
           build-dir: '{build-dir}'
           cmake-opts: '{cmake-opts}'
