Unpin nodeenv version
This was originally pinned because nodeenv was breaking on 2nd and
onward runs of `tox -e coala` due to bug in nodeenv. This no longer
seems to be the case so unpin the version so we can get updates again.

Change-Id: I6a9906f3fcdc90eb546813026527ef63eea88c4e
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ deps =
     coala
     coala-bears
     # Markdown lint requires nodejs
-    nodeenv==1.1.2
+    nodeenv
 commands =
     nodeenv -p
     npm install --global remark-cli remark-lint write-good
