Enable configuring the concurrency of jjb-verify
The JJB verify job always runs concurrently. By turning the concurrency
setting into a variable, users will be able to run the job serially,
which may be required on static nodes.

Issue: RELENG-1509
Change-Id: I4f2b51924a71674bbf2d4bbf8acc637971470eec
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -98,6 +98,7 @@
 
     branch: master
     build-timeout: 10
+    concurrent: true
     disable-job: false
     github-url: 'https://github.com'
     jjb-cache: '$HOME/.cache/jenkins_jobs'
@@ -818,7 +819,7 @@
     # Job Configuration #
     #####################
 
-    concurrent: true
+    concurrent: '{concurrent}'
 
     builders:
       - lf-infra-pre-build
