Enable configuring the concurrency of jjb-verify
The JJB verify job always runs concurrently. By turning the concurrency
setting into a variable, users will be able to run the job serially,
which may be required on static nodes.

Issue: RELENG-1509
Change-Id: I4f2b51924a71674bbf2d4bbf8acc637971470eec
Signed-off-by: Trevor Bramwell <tbramwell@linuxfoundation.org>

--- a/jjb/lf-ci-jobs.yaml
+++ b/jjb/lf-ci-jobs.yaml
@@ -805,6 +805,9 @@
     # Default parameters #
     ######################
 
+    concurrent: true
+    build-concurrent: true
+
     gerrit_verify_triggers:
       - patchset-created-event:
           exclude-drafts: true
@@ -817,8 +820,6 @@
     #####################
     # Job Configuration #
     #####################
-
-    concurrent: true
 
     builders:
       - lf-infra-pre-build
@@ -847,6 +848,8 @@
     #####################
     # Job Configuration #
     #####################
+
+    concurrent: '{build-concurrent}'
 
     scm:
       - lf-infra-gerrit-scm:
