Refactor github-maven-sonar trigger
Configure the trigger to run on weekly cron, and also
allow a trigger via GHPRB comment only.

Issue-ID: RELENG-1508
Change-Id: I82e2ab19dc52bc29c8c6549ba753ad1e2e743994
Signed-off-by: Jeremy Phelps <jphelps@linuxfoundation.org>

--- a/jjb/lf-maven-jobs.yaml
+++ b/jjb/lf-maven-jobs.yaml
@@ -941,12 +941,18 @@
           jenkins-ssh-credential: '{jenkins-ssh-credential}'
 
     triggers:
+      # Build weekly on Saturdays
+      - timed: 'H H * * 6'
       - github-pull-request:
           trigger-phrase: '^run-sonar$'
-          only-trigger-phrase: false
+          only-trigger-phrase: true
           status-context: 'Maven Sonar'
           permit-all: true
           github-hooks: true
+          org-list:
+            - '{github-org}'
+          white-list: '{obj:github_pr_whitelist}'
+          admin-list: '{obj:github_pr_admin_list}'
           white-list-target-branches:
             - '{branch}'
 
