Ensure that no lingering .netrc is overriding cfg
If a .netrc already exists with permissions to the same server
as logs, credentials in .netrc are read in order so the log
credentials will not be used. Ensure that no such file pre-exists
before we try to ship logs.

Change-Id: I0449702fd27837208e25a26e34a62f0b8a551c67
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -56,6 +56,8 @@
 - builder:
     name: lf-infra-ship-logs
     builders:
+      # Ensure no pre-existing .netrc files are overriding logs config
+      - lf-provide-maven-settings-cleanup
       - config-file-provider:
           files:
             - file-id: 'jenkins-log-archives-settings'
