--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -252,6 +252,14 @@
       - shell: !include-raw-escape: ../shell/rtd-verify.sh
 
 - builder:
+    name: lf-releng-release-jobs
+    builders:
+      - inject:
+          properties-content: DOC_DIR={doc-dir}
+      - shell: !include-raw-escape:
+          - ../shell/releng-release-branch-or-tag.sh
+
+- builder:
     name: lf-sigul-sign-dir
     # Requires that Jenkins be configured with SIGUL_BRIDGE_IP as a global
     # Environment variable
