--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -246,10 +246,20 @@
 - builder:
     name: lf-rtd-verify
     builders:
-      - inject:
-          properties-content: DOC_DIR={doc-dir}
       - shell: !include-raw-escape: ../shell/tox-install.sh
       - shell: !include-raw-escape: ../shell/rtd-verify.sh
+
+- builder:
+    name: lf-release-job-verify
+    builders:
+      - shell: !include-raw-escape:
+          - ../shell/release-job-verify.sh
+
+- builder:
+    name: lf-release-job-merge
+    builders:
+      - shell: !include-raw-escape:
+          - ../shell/release-job-merge.sh
 
 - builder:
     name: lf-sigul-sign-dir
