--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -246,10 +246,16 @@
 - builder:
     name: lf-rtd-verify
     builders:
-      - inject:
-          properties-content: DOC_DIR={doc-dir}
       - shell: !include-raw-escape: ../shell/tox-install.sh
       - shell: !include-raw-escape: ../shell/rtd-verify.sh
+
+- builder:
+    name: lf-releng-release-jobs
+    builders:
+      - inject:
+          properties-content: DOC_DIR={doc-dir}
+      - shell: !include-raw-escape:
+          - ../shell/releng-release-branch-or-tag.sh
 
 - builder:
     name: lf-sigul-sign-dir
