--- a/jjb/lf-macros.yaml
+++ b/jjb/lf-macros.yaml
@@ -252,6 +252,11 @@
       - shell: !include-raw-escape: ../shell/rtd-verify.sh
 
 - builder:
+    name: lf-releases
+    builders:
+      - shell: !include-raw: ../shell/release-job.sh
+
+- builder:
     name: lf-sigul-sign-dir
     # Requires that Jenkins be configured with SIGUL_BRIDGE_IP as a global
     # Environment variable
